# rozetka_test

./: README.md  pyproject.toml  requirements.txt
framework/: __init__.py  page.py  search_bar.py
tests/: conftest.py
tests/buttons_references/: conftest.py  test_categories.py  test_region.py  test_zsu.py
tests/search_bar/: conftest.py  test_place.py  test_typing.py
